--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cats Of Campus</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id = "header">
@@ -23,7 +24,7 @@
     </div>
     <div id = "main">
         <div class="section">
-            <img src="gingerbell.png" alt="gingerbell">
+            <img id = "ginger" src="gingerbell.png" alt="gingerbell">
             <div class="desc">
                 <h3>Gingerbell</h3>
                 <h5>Orange you glad I'm here!</h5>
@@ -32,16 +33,16 @@
         </div>
 
         <div class="section">
-            <img src="boss.png" alt="boss"> 
+            <img id = "boss" src="boss.png" alt="boss"> 
             <div class="desc">
                 <h3>Boss</h3>
                 <h5>I'm the boss, don't forget it.</h5>
-                <p>The boss is in charge, don't dissapoint the boss cat.</p>
+                <p>The boss is in charge, don't disappoint the boss cat.</p>
             </div>
         </div>
 
         <div class="section">
-            <img src="solo.png" alt="solo">
+            <img id = "solo" src="solo.png" alt="solo">
             <div class="desc">
                 <h3>Solo</h3>
                 <h5>Just try to spot me!</h5>
@@ -54,11 +55,18 @@
                 </p>
             </div>
         </div>
+        <div id = "button" class="button">
+            <button>
+                Dogs are better. <br> Show dogs.
+            </button>
+        </div>
 
         <div>
             <a href="https://www.youtube.com/watch?v=DXUAyRRkI6k">For more cats, please click me</a>
         </div>
 <br>
+
+
 
 
     </div>
@@ -70,6 +78,7 @@
             copyright 2022 commlab
         </div>
     </div>
+    
     
 </body>
 </html>
